style: Fixed style on small displays

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,12 @@
 @tailwind utilities;
 
 html, body, #__next {
-    height: 100%;
+    min-height: 100vh;
+}
+
+#__next {
+    display: flex;
+    flex-direction: column;
 }
 
 *{
